Add concurrency tests